// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre el componente <GifExpertApp /> El componente debe hacer match con el snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas sobre el componente <GifExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      categories={
        Array [
          "One Punch",
          "Dragon ball",
        ]
      }
      category="One Punch"
      key="One Punch"
      setCategories={[Function]}
    />
    <GifGrid
      categories={
        Array [
          "One Punch",
          "Dragon ball",
        ]
      }
      category="Dragon ball"
      key="Dragon ball"
      setCategories={[Function]}
    />
  </ol>
</Fragment>
`;
